# EffectorP-3.0

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
EP3/data/: __init__.py
EffectorP3/: EffectorP.py  functions.py
EffectorP3/data/: __init__.py
