[metadata]
name = EffectorP3
version = 3.0.0-beta
description = EffectorP-3.0: Prediction of apoplastic and cytoplasmic effectors in fungi and oomycetes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fungi, machine-learning, bioinformatics, effector

[options]
packages = EffectorP3
include_package_data = True
scripts = EffectorP3/EffectorP.py
